--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="is-loading" lang="en" style="--cursor-x: 0.5; --cursor-y: 0.5;" wp-template wp-template-export-as="index.php" wp-template-define-master-page="true">
     <head>
-        <title>AYOCIN - Where design meets your well-being</title>
+        <title>GREEN INVEST</title>
         <meta charset="utf-8">
         <meta name="theme-color" content="#000000">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <div class="h-full w-full pointer-events-none flex items-center justify-center absolute left-0 top-0" data-loading-progress="">00%</div>
                     <div class="flex items-center justify-between laptop:grid laptop:grid-cols-12 laptop:gap-x-18 header-container py-15 laptop:py-18 container">
                         <div class="laptop:col-span-4 relative z-2">
-                            <img src="images/green_invest_logo.png" class="header-logo cursor-pointer" xmlns="http://www.w3.org/2000/svg" width="200" height="50em" fill="none" viewbox="0 0 101 14" data-scroll-to="top">
+                            <img src="images/green_invest_logo.png" style="width: 12em;" class="header-logo cursor-pointer" xmlns="http://www.w3.org/2000/svg" width="200" height="50em" fill="none" viewbox="0 0 101 14" data-scroll-to="top">
                                 <path fill="currentColor" d="M7.328.356h3.943c.077.07.89 1.44 2.44 4.109 3.13 5.377 4.76 8.187 4.892 8.429v.023h-4.556c-.108-.11-1.515-2.505-4.221-7.188-.332-.562-.505-.843-.52-.843-3.046 5.237-4.61 7.914-4.695 8.031H.03v-.059C4.718 4.796 7.151.628 7.328.356Zm9.644 0h3.908l4.58 4.998C28.412 2.092 29.93.426 30.016.356h3.909c.038.008.057.027.057.058-.354.36-2.536 2.755-6.545 7.188v5.256c0 .04-.02.059-.058.059h-3.862c-.039 0-.058-.02-.058-.059V7.602L16.914.391l.058-.035Zm21.996 0h9.217c1.387 0 2.517.542 3.388 1.627.408.577.613 1.186.613 1.826v5.678c0 1.272-.706 2.275-2.116 3.008a4.352 4.352 0 0 1-1.885.422h-9.101c-1.35 0-2.47-.554-3.365-1.662-.386-.555-.578-1.132-.578-1.733V3.786c0-1.335.778-2.373 2.336-3.114.616-.21 1.114-.316 1.491-.316Zm.14 5.034v2.47c0 1.014.52 1.69 1.56 2.025.147.039.3.059.463.059h5.088c.91 0 1.545-.488 1.908-1.464.054-.14.08-.328.08-.562V5.53c0-1.07-.489-1.783-1.468-2.142a7.013 7.013 0 0 0-.752-.047h-4.856c-.933 0-1.58.484-1.943 1.452-.054.195-.08.394-.08.597ZM59.573.356h13.125c.039.008.058.027.058.058v2.868c0 .04-.02.059-.058.059H61.701c-.995 0-1.657.55-1.989 1.65a4.145 4.145 0 0 0-.035.457v2.435c0 .921.455 1.569 1.365 1.943.185.078.405.118.659.118h10.997c.039 0 .058.015.058.046v2.868c0 .04-.02.059-.058.059H59.654c-1.349 0-2.47-.554-3.365-1.662-.385-.562-.578-1.14-.578-1.733V3.669c0-1.023.574-1.92 1.723-2.693.748-.413 1.46-.62 2.14-.62Zm16.767 0h3.85c.039.008.058.027.058.058v12.444c0 .04-.02.059-.058.059h-3.85c-.04 0-.059-.02-.059-.059V.414c.008-.039.027-.058.058-.058Zm7.5 0h13.147c1.172 0 2.236.515 3.192 1.545.432.617.648 1.225.648 1.826v9.131c0 .04-.02.059-.058.059h-3.863c-.038 0-.057-.02-.057-.059v-7.27c0-1.108-.47-1.83-1.411-2.165a2.603 2.603 0 0 0-.613-.082h-7.077v9.517c0 .04-.02.059-.058.059h-3.85c-.04 0-.059-.02-.059-.059V.414c.008-.039.027-.058.058-.058Z"></path>
                             <!-- </svg> -->
                             
@@ -166,7 +166,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         </div>
                                     </div>
                                     <div class="flex relative items-center justify-between py-12 laptop:py-20 container leading-none">
-                                        <span class="opacity-0" data-animation="moveUp" data-delay="0"><span class="inline-flex items-center"><span class="w-6 h-6 rounded-full bg-current mr-5"></span><span>Eine Holding mit Verantwortung – für Menschen, Natur und Zukunft.</span></span></span>
+                                        <span class="opacity-0" data-animation="moveUp" data-delay="0"><span class="inline-flex items-center"><span>Eine Holding mit Verantwortung – für Menschen, Natur und Zukunft.</span></span></span>
                                         <span class="opacity-0" data-animation="moveUp" data-delay="0">&copy; 2025</span>
                                         <div class="grid gap-y-5 md:gap-y-10 absolute left-0 top-full md:left-[64%] px-12 md:w-[36%] md:px-0 w-full py-12 laptop:py-18 md:top-0" data-animation="moveUp" data-delay="0">
                                             <span class="h-1 bg-current opacity-20 left-0 absolute top-0 w-full md:hidden scale-x-0" data-animation="scaleX" data-delay="0"></span>
@@ -197,7 +197,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                     </div>
                                 </div>
                                 <div class="absolute left-0 bottom-0 lg:-bottom-50 laptop:-bottom-0 w-full h-full opacity-0 pointer-events-none flex items-end justify-center land:bottom-auto land:top-60 land:items-start laptop:items-start lg:z-4 px-5 overflow-hidden" data-lamp-image="">
-                                    <div class="relative" style="width: 40%; margin-top: 15em;" data-intro-lamp="">
+                                    <div class="relative" style="width: 40%; margin-top: 14em; margin-right: 35em;" data-intro-lamp="">
                                         <picture class="w-full h-auto flex w-full h-full max-w-full max-h-full object-contain" style="--aspect: 0.7996702390766695">
                                             <img class="block w-full w-full h-full max-w-full max-h-full object-contain" src="images/green_.PNG" alt="image description" width="1940" height="2426" draggable="false">
                                         </picture>
@@ -221,10 +221,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             <span class="w-full h-full bg-black opacity-0 absolute z-10 left-0 top-0 pointer-events-none" data-animation="fade" data-from="0" data-to="0.35" data-scrub="" data-ease="none" data-repeat="" data-start="bottom bottom" data-end="+=100%"></span>
                             <div class="sticky top-0 w-full h-screen col-start-1 row-start-1 row-end-1 col-span-1 -my-[100vh] !-my-[100svh]">
                                 <picture class="w-full h-auto flex object-contain sticky left-0 top-0 hidden md:block" style="--aspect: 1.0850903614457832" data-background="desktop">
-                                    <img class="block w-full min-h-screen" src="images/uploads-image03_322cdb0c37.jpg" alt="image description" width="2882" height="2656" draggable="false">
+                                    <img class="block w-full min-h-screen" src="images/forest-1866837_1920.jpg" alt="image description" width="2882" height="2656" draggable="false">
                                 </picture>
                                 <picture class="w-full h-auto flex object-contain sticky left-0 top-0 md:hidden" style="--aspect: 0.47058823529411764" data-background="mobile">
-                                    <img class="block w-full min-h-screen" src="images/uploads-image04_82afc72b31.jpg" alt="image description" width="640" height="1360" draggable="false">
+                                    <img class="block w-full min-h-screen" src="images/forest-1866837_1920.jpg" alt="image description" width="640" height="1360" draggable="false">
                                 </picture>
                             </div>
                             <div class="w-full h-screen sticky top-0 grid p-12 laptop:p-18 col-start-1 col-span-1 row-start-1 row-end-1 laptop:pt-[9.4rem] -my-[100vh] !-my-[100svh]">
@@ -300,7 +300,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <div class="flex-grow flex flex-col h-0">
                                             <div class="absolute left-0 bottom-0 w-auto h-full relative basis-[100%] h-0 width-full pt-30 md:w-auto md:pt-0 md:h-auto md:flex md:items-end md:max-w-[75%] md:-left-[10%] laptop:left-0 md:absolute lg:max-w-[55rem]" data-image-container="">
                                                 <span class="lamp-gradient absolute"></span>
-                                                <img class="h-full w-auto relative object-contain px-10 md:px-0 w-full md:w-auto object-bottom md:object-right-bottom md:min-h-0 relative laptop:left-[18%]" src="images/uploads-lamp01_d1eadb19c4.png" data-image="" alt="ATMOS">
+                                                <img class="h-full w-auto relative object-contain px-10 md:px-0 w-full md:w-auto object-bottom md:object-right-bottom md:min-h-0 relative laptop:left-[18%]" src="images/Windrad.png" data-image="" alt="ATMOS">
                                             </div>
                                         </div>
                                     </div>
@@ -308,7 +308,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <div class="flex-grow flex flex-col h-0">
                                             <div class="absolute left-0 bottom-0 w-auto h-full relative basis-[100%] h-0 width-full md:-left-[20%] lg:left-0 md:absolute md:w-auto laptop:max-w-full md:pt-0 md:h-full" data-image-container="">
                                                 <span class="lamp-gradient absolute"></span>
-                                                <img class="h-full w-auto relative h-full object-cover md:object-contain object-bottom md:object-right" src="images/uploads-lamp02_d4af67df99.png" data-image="" alt="ATMOS">
+                                                <img class="h-full w-auto relative h-full object-cover md:object-contain object-bottom md:object-right" src="images/sola.png" data-image="" alt="ATMOS">
                                             </div>
                                         </div>
                                     </div>
@@ -316,7 +316,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                         <div class="flex-grow flex flex-col h-0">
                                             <div class="absolute left-0 bottom-0 w-auto h-full absolute left-0 top-0 w-full h-full laptop:max-w-[83.7rem] md:-left-[20%] lg:left-0" data-image-container="">
                                                 <span class="lamp-gradient absolute"></span>
-                                                <img class="h-full w-auto relative h-full max-w-none left-1/2 -translate-x-1/2 object-cover object-right-bottom md:object-right laptop:left-[29.7%] laptop:transform-none" src="images/uploads-lamp03_430f761f72.png" data-image="" alt="ATMOS">
+                                                <img class="h-full w-auto relative h-full max-w-none left-1/2 -translate-x-1/2 object-cover object-right-bottom md:object-right laptop:left-[29.7%] laptop:transform-none" src="images/co2.png" data-image="" alt="ATMOS">
                                             </div>
                                         </div>
                                     </div>
@@ -341,7 +341,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                                             </svg>
                                         </div>
                                         <svg class="absolute path-connection -z-1 pointer-events-none" width="449" height="247" viewbox="0 0 449 247" fill="none" xmlns="http://www.w3.org/2000/svg" data-connection-path="">
-                                            <path d="M1 1L309 246L449 246" stroke="currentColor" stroke-opacity="0.2" stroke-dasharray="6 6"></path>
+                                            <!-- <path d="M1 1L309 246L449 246" stroke="currentColor" stroke-opacity="0.2" stroke-dasharray="6 6"></path> -->
                                         </svg>
                                         <div class="p-12 laptop:p-18 relative left-0 bottom-0 w-full md:bottom-auto md:top-[7.6rem] md:left-auto md:w-auto md:right-0">
                                             <div class="grid relative w-full bottom-0 right-0 bg-bronze bg-opacity-10 backdrop-blur-lg rounded overflow-hidden md:max-w-[23rem] laptop:max-w-[28rem] 2xl:max-w-[33.5rem]" data-content-description-parent="">
